--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -4,9 +4,10 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.Controller">
+<?import javafx.scene.layout.StackPane?>
+<StackPane id="fondo" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.Controller">
     <children>
-        <Label fx:id="lblInfo" layoutX="14.0" layoutY="14.0" prefHeight="15.0" prefWidth="220.0" text="Test JavaFX Games" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
+        <Label fx:id="lblInfo" layoutX="14.0" layoutY="14.0" prefHeight="15.0" prefWidth="220.0"  AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
         <Canvas fx:id="mainCanvas" height="400.0" width="600.0" />
     </children>
-</AnchorPane>
+</StackPane>
