--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-
+<?import javafx.geometry.*?>
+<?import java.lang.*?>
+<?import javafx.scene.canvas.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.StackPane?>
+
 <StackPane id="fondo" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.Controller">
     <children>
-        <Label fx:id="lblInfo" layoutX="14.0" layoutY="14.0" prefHeight="15.0" prefWidth="220.0"  AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
+        <Label fx:id="lblInfo" layoutX="14.0" layoutY="14.0" prefHeight="15.0" prefWidth="220.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
         <Canvas fx:id="mainCanvas" height="400.0" width="600.0" />
+      <Text fx:id="puntuacio" strokeType="OUTSIDE" strokeWidth="0.0" text="Punts: " wrappingWidth="75.7294921875" StackPane.alignment="TOP_LEFT">
+         <StackPane.margin>
+            <Insets left="30.0" top="20.0" />
+         </StackPane.margin>
+      </Text>
     </children>
 </StackPane>
