--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -15,9 +15,19 @@
     <children>
         <Label fx:id="lblInfo" layoutX="14.0" layoutY="14.0" prefHeight="15.0" prefWidth="220.0" AnchorPane.leftAnchor="14.0" AnchorPane.topAnchor="14.0" />
         <Canvas fx:id="mainCanvas" height="400.0" width="600.0" />
-      <Text fx:id="puntuacio" strokeType="OUTSIDE" strokeWidth="0.0" text="Punts: " wrappingWidth="75.7294921875" StackPane.alignment="TOP_LEFT">
+      <Text fx:id="puntuacio" strokeType="OUTSIDE" strokeWidth="0.0" text="Punts: " wrappingWidth="96.7294921875" StackPane.alignment="TOP_LEFT">
          <StackPane.margin>
-            <Insets left="30.0" top="20.0" />
+            <Insets left="50.0" top="20.0" />
+         </StackPane.margin>
+      </Text>
+      <Text fx:id="nivell" strokeType="OUTSIDE" strokeWidth="0.0" text="Nivell: " wrappingWidth="96.7294921875" StackPane.alignment="TOP_LEFT">
+         <StackPane.margin>
+            <Insets left="475.0" top="20.0" />
+         </StackPane.margin>
+      </Text>
+      <Text fx:id="vides" strokeType="OUTSIDE" strokeWidth="0.0" text="Vides: " wrappingWidth="96.7294921875" StackPane.alignment="TOP_LEFT">
+         <StackPane.margin>
+            <Insets left="250.0" top="20.0" />
          </StackPane.margin>
       </Text>
     </children>
