--- a/src/sample/gameover.fxml
+++ b/src/sample/gameover.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="control.GameOver"
-            prefHeight="400.0" prefWidth="600.0">
-
-</AnchorPane>
+<StackPane fx:id="fondogo" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8"
+           xmlns:fx="http://javafx.com/fxml/1" fx:controller="control.GameOver">
+   <Text fx:id="puntuacio" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" textAlignment="CENTER"
+         wrappingWidth="227.7294921875" StackPane.alignment="BOTTOM_CENTER"/>
+</StackPane>
